k8s/registry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calendar
  labels:
    app.kubernetes.io/part-of: calendar
    app.kubernetes.io/name: calendar-registry
    app.kubernetes.io/component: registry
