k8s/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-registry
  namespace: calendar
  labels:
    app: calendar-registry
    app.kubernetes.io/part-of: calendar
    app.kubernetes.io/name: calendar-registry
spec:
  type: ClusterIP
  selector:
    app: calendar-registry
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: http
